@@ -1,84 +1,88 @@
 package com.microservice.usuario.controller;
 
-import com.microservice.usuario.model.Usuario;
-import com.microservice.usuario.service.UsuarioService;
-import com.microservice.usuario.dto.UsuarioDTO;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.http.*;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
-import org.springframework.hateoas.EntityModel;
-import org.springframework.hateoas.server.mvc.WebMvcLinkBuilder;
 
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.*;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
-import org.springframework.hateoas.CollectionModel;
-
-import jakarta.validation.Valid;
 import java.net.URI;
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.hateoas.CollectionModel;
+import org.springframework.hateoas.EntityModel;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+
+import com.microservice.usuario.dto.UsuarioDTO;
+import com.microservice.usuario.model.Usuario;
+import com.microservice.usuario.service.UsuarioService;
+
+import jakarta.validation.Valid;
+import lombok.Getter;
+
+@Getter
 @RestController
 @RequestMapping("/api/v1/usuarios")
 public class UsuarioController {
 
-    @Autowired
+     @Autowired
     private UsuarioService usuarioService;
 
-   /**
- * @return
- */
+    // GET ALL with HATEOAS
     @GetMapping("/listar")
     public CollectionModel<EntityModel<UsuarioDTO>> getAllUsers() {
-        List<Object> usuarios = usuarioService.findAll().stream()
-            .map(u -> extracted(u))
-            .toList();
+        List<EntityModel<UsuarioDTO>> usuarios = usuarioService.findAll().stream()
+            .map(usuario -> {
+                UsuarioDTO dto = new UsuarioDTO(usuario.getId(), usuario.getUsername(), usuario.getPassword(), usuario.getEmail(), usuario.getRol());
+                return EntityModel.of(dto,
+                        linkTo(methodOn(UsuarioController.class).getUserById(usuario.getId())).withSelfRel(),
+                        linkTo(methodOn(UsuarioController.class).getAllUsers()).withRel("usuarios"));
+            })
+            .collect(Collectors.toList());
 
-         return CollectionModel.of(usuarios,
+        return CollectionModel.of(usuarios,
                 linkTo(methodOn(UsuarioController.class).getAllUsers()).withSelfRel());
     }
 
-   private Object extracted(Usuario u) {
-    UsuarioDTO dto = new UsuarioDTO(u.getId(), u.getUsername(), u.getPassword(), u.getEmail(), u.getRol());
-        return EntityModel.of(dto,
-         linkTo(methodOn(UsuarioController.class).getUserById(u.getId())).withSelfRel()
-    );
-   }
-
+    // GET BY ID with HATEOAS
     @GetMapping("/{id_usuario}")
-        public ResponseEntity<?> getUserById(@PathVariable Integer id_usuario) {
-            Optional<Usuario> usuario = usuarioService.findById(id_usuario);
+    public ResponseEntity<?> getUserById(@PathVariable Integer id_usuario) {
+        Optional<Usuario> usuario = usuarioService.findById(id_usuario);
 
-            if (usuario.isPresent()) {
-                Usuario u = usuario.get();
-                UsuarioDTO dto = new UsuarioDTO(u.getId(), u.getUsername(), u.getPassword(), u.getEmail(), u.getRol());
+        if (usuario.isPresent()) {
+            Usuario u = usuario.get();
+            UsuarioDTO dto = new UsuarioDTO(u.getId(), u.getUsername(), u.getPassword(), u.getEmail(), u.getRol());
 
-                EntityModel<UsuarioDTO> resource = EntityModel.of(dto);
-                 resource.add(((Object) linkTo(methodOn(UsuarioController.class).getUserById(id_usuario))).withSelfRel());
-                 resource.add(((Object) linkTo(methodOn(UsuarioController.class).getAllUsers())).withRel("usuarios"));
+            EntityModel<UsuarioDTO> resource = EntityModel.of(dto,
+                    linkTo(methodOn(UsuarioController.class).getUserById(id_usuario)).withSelfRel(),
+                    linkTo(methodOn(UsuarioController.class).getAllUsers()).withRel("usuarios"));
 
-             return ResponseEntity.ok(resource);
-            } else {
-                     Map<String, String> errorBody = new HashMap<>();
-                    errorBody.put("message", "No se encontró el usuario con ese ID: " + id_usuario);
-                    errorBody.put("status", "404");
-                     errorBody.put("timestamp", LocalDateTime.now().toString());
-                 return ResponseEntity.status(HttpStatus.NOT_FOUND).body(errorBody);
-             }
-}   
-
-    private Object linkTo(com.microservice.usuario.controller.CollectionModel<com.microservice.usuario.controller.EntityModel<UsuarioDTO>> userById) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'linkTo'");
+            return ResponseEntity.ok(resource);
+        } else {
+            Map<String, String> errorBody = new HashMap<>();
+            errorBody.put("message", "No se encontró el usuario con ese ID: " + id_usuario);
+            errorBody.put("status", "404");
+            errorBody.put("timestamp", LocalDateTime.now().toString());
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(errorBody);
+        }
     }
 
-    private UsuarioController methodOn(Class<UsuarioController> class1) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'methodOn'");
-    }
-
+    // POST
     @PostMapping
     public ResponseEntity<?> save(@Valid @RequestBody UsuarioDTO usuarioDTO) {
         try {
@@ -90,12 +94,7 @@ public class UsuarioController {
 
             Usuario guardado = usuarioService.save(usuario);
 
-            UsuarioDTO responseDTO = new UsuarioDTO(0, "benja", "123", "benja@mail.com", "ADMIN");
-            responseDTO.setId(guardado.getId());
-            responseDTO.setUsername(guardado.getUsername());
-            responseDTO.setPassword(guardado.getPassword());
-            responseDTO.setEmail(guardado.getEmail());
-            responseDTO.setRol(guardado.getRol());
+            UsuarioDTO responseDTO = new UsuarioDTO(guardado.getId(), guardado.getUsername(), guardado.getPassword(), guardado.getEmail(), guardado.getRol());
 
             URI location = ServletUriComponentsBuilder
                     .fromCurrentRequest()
@@ -112,6 +111,7 @@ public class UsuarioController {
         }
     }
 
+    // PUT
     @PutMapping("/{id_usuario}")
     public ResponseEntity<UsuarioDTO> update(@PathVariable int id_usuario, @RequestBody UsuarioDTO usuarioDTO) {
         try {
@@ -124,12 +124,7 @@ public class UsuarioController {
 
             Usuario actualizado = usuarioService.save(usuario);
 
-            UsuarioDTO responseDTO = new UsuarioDTO(0, "benja", "123", "benja@mail.com", "ADMIN");
-            responseDTO.setId(actualizado.getId());
-            responseDTO.setUsername(actualizado.getUsername());
-            responseDTO.setPassword(actualizado.getPassword());
-            responseDTO.setEmail(actualizado.getEmail());
-            responseDTO.setRol(actualizado.getRol());
+            UsuarioDTO responseDTO = new UsuarioDTO(actualizado.getId(), actualizado.getUsername(), actualizado.getPassword(), actualizado.getEmail(), actualizado.getRol());
 
             return ResponseEntity.ok(responseDTO);
 
@@ -138,6 +133,7 @@ public class UsuarioController {
         }
     }
 
+    // DELETE
     @DeleteMapping("/{id_usuario}")
     public ResponseEntity<?> eliminar(@PathVariable int id_usuario) {
         try {
